Bug 1769429. Revert 1719215. r=lsalzman, a=dmeehan

This fixes subimage drawing with Cairo.

Differential Revision: https://phabricator.services.mozilla.com/D151152